[package]
name = "workshy_twitch"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"   # For managing environment variables securely
reqwest = { version = "0.12.7", features = ["blocking", "json"] }  # HTTP client to make requests to the Twitch API
serde_json = "1.0"  # For handling JSON responses from Twitch API
